[package]
name = "snowgauge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
serialport = "4.5"
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"